style: modern java