@@ -8,8 +8,6 @@ import io.swagger.v3.oas.models.OpenAPI;
 import io.swagger.v3.parser.core.models.SwaggerParseResult;
 import muck.model.Pipeline;
 
-import java.io.InputStream;
-import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.logging.Level;
@@ -36,7 +34,7 @@ public class BobClient {
 
     private OpenAPI loadOpenApiSpec() {
         try {
-            InputStream specStream = getClass().getClassLoader()
+            var specStream = getClass().getClassLoader()
                     .getResourceAsStream("api.yaml");
             if (specStream == null) {
                 LOGGER.warning("Could not load api.yaml from resources");
@@ -44,7 +42,7 @@ public class BobClient {
             }
 
             // Parse OpenAPI spec from classpath
-            SwaggerParseResult result = new OpenAPIParser()
+            var result = new OpenAPIParser()
                     .readContents(new String(specStream.readAllBytes()), null, null);
 
             if (result.getMessages() != null && !result.getMessages().isEmpty()) {
@@ -65,8 +63,7 @@ public class BobClient {
      */
     public List<Pipeline> listPipelines() {
         try {
-            Http1ClientResponse response = client.get("/api/pipelines")
-                    .request();
+            var response = client.get("/api/pipelines").request();
 
             if (response.status() != Status.OK_200) {
                 LOGGER.log(Level.WARNING, "Failed to fetch pipelines: {0}", response.status());
@@ -75,15 +72,12 @@ public class BobClient {
 
             // Parse response as list of maps
             List<Map<String, Object>> pipelinesData = response.as(List.class);
-            List<Pipeline> pipelines = new ArrayList<>();
-
-            for (Map<String, Object> data : pipelinesData) {
-                String name = (String) data.get("name");
-                String group = (String) data.get("group");
-                if (name != null) {
-                    pipelines.add(new Pipeline(group, name));
-                }
-            }
+            var pipelines = pipelinesData.stream()
+                    .filter(data -> data.get("name") != null)
+                    .map(data -> new Pipeline(
+                            (String) data.get("group"),
+                            (String) data.get("name")))
+                    .toList();
 
             LOGGER.log(Level.INFO, "Fetched {0} pipelines", pipelines.size());
             return pipelines;
@@ -100,8 +94,8 @@ public class BobClient {
      */
     public String getPipelineStatus(String group, String name) {
         try {
-            String path = String.format("/api/pipelines/%s/%s/status", group, name);
-            Http1ClientResponse response = client.get(path).request();
+            var path = "/api/pipelines/%s/%s/status".formatted(group, name);
+            var response = client.get(path).request();
 
             if (response.status() != Status.OK_200) {
                 return "unknown";
@@ -122,8 +116,8 @@ public class BobClient {
      */
     public boolean startPipeline(String group, String name) {
         try {
-            String path = String.format("/api/pipelines/%s/%s/start", group, name);
-            Http1ClientResponse response = client.post(path).request();
+            var path = "/api/pipelines/%s/%s/start".formatted(group, name);
+            var response = client.post(path).request();
 
             return response.status() == Status.ACCEPTED_202;
         } catch (Exception e) {
